--- a/front/index.html
+++ b/front/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="theme-color"
+      media="(prefers-color-scheme: light)"
+      content="white"
+    />
+    <link rel="apple-touch-icon" href="src/images/icon-above-font.png" />
     <title>Vite App</title>
   </head>
   <body>
